--- a/.github/workflows/mwaa-s3-sync.yml
+++ b/.github/workflows/mwaa-s3-sync.yml
@@ -15,15 +15,11 @@ jobs:
       - name: Configure AWS credentials
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: |
-            --exclude ".git/*" \
-            --exclude ".github/*" \
-            --exclude ".gitignore" \
-            --exclude ".gitattributes"
+          args: --exclude '.git/*' --exclude '.github/*' --exclude '.gitignore' --exclude '.gitattributes'
  
         env:
           AWS_S3_BUCKET: 'dml-produce'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}  
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  
           AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
           DEST_DIR: 'project-realtime-log'          # optional: defaults to entire repository
